--- a/observability/docker-compose.yml
+++ b/observability/docker-compose.yml
@@ -2,6 +2,34 @@ networks:
   otel:
 
 services:
+  loki:
+    image: grafana/loki:latest
+    container_name: loki
+    volumes:
+      - ./data/loki/chunks:/loki/chunks
+      - ./data/loki/rules:/loki/rules
+      - ./config/loki.config.yaml:/etc/loki/local-config.yaml
+    user: '0'
+    networks:
+      - otel
+
+  tempo:
+    image: grafana/tempo:latest
+    container_name: tempo
+    ports:
+      - '3200' # tempo
+      - '4317' # otlp grpc
+      - '4318' # otlp http
+      - '9411' # zipkin
+    command: ['-config.file=/etc/tempo.yaml']
+    user: '0'
+    volumes:
+      - ./data/tempo/wal:/var/tempo/wal
+      - ./data/tempo/blocks:/var/tempo/blocks
+      - ./config/tempo.config.yaml:/etc/tempo.yaml
+    networks:
+      - otel
+
   zipkin:
     image: openzipkin/zipkin
     container_name: zipkin
@@ -10,13 +38,39 @@ services:
     networks:
       - otel
 
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    environment:
+      - GF_PATHS_PROVISIONING=/etc/grafana/provisioning
+      - GF_AUTH_ANONYMOUS_ENABLED=true
+      - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
+      - GF_FEATURE_TOGGLES_ENABLE=tempoSearch
+    ports:
+      - 3600:3000
+    user: '0'
+    volumes:
+      - ./data/grafana/data:/var/lib/grafana
+      - ./config/grafana.datasources.yaml:/etc/grafana/provisioning/datasources/datasources.yaml
+    depends_on:
+      - loki
+      - tempo
+    networks:
+      - otel
+
   collector:
     image: otel/opentelemetry-collector-contrib:0.111.0
+    container_name: collector
     volumes:
       - ./config/otel-collector.config.yaml:/etc/otelcol-contrib/config.yaml
     ports:
       - 13133:13133 # health_check extension
       - 4317:4317 # OTLP gRPC receiver
       - 4318:4318 # OTLP http receiver
+    depends_on:
+      - loki
+      - tempo
+      - zipkin
+      - grafana
     networks:
       - otel
