--- a/package.json
+++ b/package.json
@@ -26,7 +26,12 @@
     "@nestjs/platform-express": "^10.0.0",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/api-logs": "^0.54.0",
+    "@opentelemetry/exporter-logs-otlp-proto": "^0.54.0",
+    "@opentelemetry/exporter-metrics-otlp-proto": "^0.54.0",
+    "@opentelemetry/exporter-trace-otlp-proto": "^0.54.0",
     "@opentelemetry/resources": "^1.27.0",
+    "@opentelemetry/sdk-logs": "^0.54.0",
+    "@opentelemetry/sdk-metrics": "^1.27.0",
     "@opentelemetry/sdk-node": "^0.54.0",
     "@opentelemetry/semantic-conventions": "^1.27.0",
     "dotenv": "^16.4.5",
